Second commit, layed out the html for the quiz

--- a/index.html
+++ b/index.html
@@ -4,8 +4,228 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lord Of The Rings Quiz</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     
+    <header>
+        <div class="title-container">
+            <h1 class="title">One Lord Of The Rings Quiz To Rule Them All</h1>
+        </div>
+        <div class="quiz-results">
+            <p>You scored<span> 0%</span></p>
+        </div>
+    </header>
+
+    <main>
+        <section class="quiz-container">
+
+            <form action="" class="quiz">
+                <div class="question question-1">
+                    <h3 class="question-title">1. How many rings of power were created?</h3>
+                    <div class="form-check">
+                        <input type="radio" name="q1" value="A">
+                        <label class="form-check-label">9</label>
+                    </div>
+                    <div class="form-check">
+                        <input type="radio" name="q1" value="B">
+                        <label class="form-check-label">13</label>
+                    </div>
+                    <div class="form-check">
+                        <input type="radio" name="q1" value="C">
+                        <label class="form-check-label">20</label>
+                    </div>
+                    <div class="form-check">
+                        <input type="radio" name="q1" value="D">
+                        <label class="form-check-label">17</label>
+                    </div>
+                </div>
+
+                <div class="question question-2">
+                    <h3 class="question-title">2. What is Frodo's sword named?</h3>
+                    <div class="form-check">
+                        <input type="radio" name="q2" value="A">
+                        <label class="form-check-label">Sting</label>
+                    </div>
+                    <div class="form-check">
+                        <input type="radio" name="q2" value="B">
+                        <label class="form-check-label">Glamdring</label>
+                    </div>
+                    <div class="form-check">
+                        <input type="radio" name="q2" value="C">
+                        <label class="form-check-label">Orcrist</label>
+                    </div>
+                    <div class="form-check">
+                        <input type="radio" name="q2" value="D">
+                        <label class="form-check-label">Narsil</label>
+                    </div>
+                </div>
+
+                <div class="question question-3">
+                    <h3 class="question-title">3. What is the elvish word for friend?</h3>
+                    <div class="form-check">
+                        <input type="radio" name="q3" value="A">
+                        <label class="form-check-label">And&#250;ril</label>
+                    </div>
+                    <div class="form-check">
+                        <input type="radio" name="q3" value="B">
+                        <label class="form-check-label">Drego</label>
+                    </div>
+                    <div class="form-check">
+                        <input type="radio" name="q3" value="C">
+                        <label class="form-check-label">Mellon</label>
+                    </div>
+                    <div class="form-check">
+                        <input type="radio" name="q3" value="D">
+                        <label class="form-check-label">Navaer</label>
+                    </div>
+                </div>
+
+                <div class="question question-4">
+                    <h3 class="question-title">4. How many Nazg&#251;l are there?</h3>
+                    <div class="form-check">
+                        <input type="radio" name="q4" value="A">
+                        <label class="form-check-label">9</label>
+                    </div>
+                    <div class="form-check">
+                        <input type="radio" name="q4" value="B">
+                        <label class="form-check-label">12</label>
+                    </div>
+                    <div class="form-check">
+                        <input type="radio" name="q4" value="C">
+                        <label class="form-check-label">14</label>
+                    </div>
+                    <div class="form-check">
+                        <input type="radio" name="q4" value="D">
+                        <label class="form-check-label">6</label>
+                    </div>
+                </div>
+
+
+                <div class="question question-5">
+                    <h3 class="question-title">5. Who kills the witch king of Angmar</h3>
+                    <div class="form-check">
+                        <input type="radio" name="q5" value="A">
+                        <label class="form-check-label">Rosie Cotton</label>
+                    </div>
+                    <div class="form-check">
+                        <input type="radio" name="q5" value="B">
+                        <label class="form-check-label">Eowyn</label>
+                    </div>
+                    <div class="form-check">
+                        <input type="radio" name="q5" value="C">
+                        <label class="form-check-label">Galadriel</label>
+                    </div>
+                    <div class="form-check">
+                        <input type="radio" name="q5" value="D">
+                        <label class="form-check-label">Arwen</label>
+                    </div>
+                </div>
+
+                <div class="question question-6">
+                    <h3 class="question-title">6. What age does The Lord Of The Rings take place in?</h3>
+                    <div class="form-check">
+                        <input type="radio" name="q6" value="A">
+                        <label class="form-check-label">1st</label>
+                    </div>
+                    <div class="form-check">
+                        <input type="radio" name="q6" value="B">
+                        <label class="form-check-label">2nd</label>
+                    </div>
+                    <div class="form-check">
+                        <input type="radio" name="q6" value="C">
+                        <label class="form-check-label">3rd</label>
+                    </div>
+                    <div class="form-check">
+                        <input type="radio" name="q6" value="D">
+                        <label class="form-check-label">4th</label>
+                    </div>
+                </div>
+
+                <div class="question question-7">
+                    <h3 class="question-title">7. What is Saruman's tower called?</h3>
+                    <div class="form-check">
+                        <input type="radio" name="q7" value="A">
+                        <label class="form-check-label">Orthanc</label>
+                    </div>
+                    <div class="form-check">
+                        <input type="radio" name="q7" value="B">
+                        <label class="form-check-label">Barad-d&#251;r</label>
+                    </div>
+                    <div class="form-check">
+                        <input type="radio" name="q7" value="C">
+                        <label class="form-check-label">Minas Ithil</label>
+                    </div>
+                    <div class="form-check">
+                        <input type="radio" name="q7" value="D">
+                        <label class="form-check-label">Helm's Deep</label>
+                    </div>
+                </div>
+
+
+                <div class="question question-8">
+                    <h3 class="question-title">8. What was Gollum's name before he was corrupted by the One ring?</h3>
+                    <div class="form-check">
+                        <input type="radio" name="q8" value="A">
+                        <label class="form-check-label">D&#233;agol</label>
+                    </div>
+                    <div class="form-check">
+                        <input type="radio" name="q8" value="B">
+                        <label class="form-check-label">Meriadoc</label>
+                    </div>
+                    <div class="form-check">
+                        <input type="radio" name="q8" value="C">
+                        <label class="form-check-label">Peregrin</label>
+                    </div>
+                    <div class="form-check">
+                        <input type="radio" name="q8" value="D">
+                        <label class="form-check-label">Sm&#233;agol</label>
+                    </div>
+                </div>
+
+                <div class="question question-9">
+                    <h3 class="question-title">9. How many companions are in the Fellowship Of The Ring?</h3>
+                    <div class="form-check">
+                        <input type="radio" name="q9" value="A">
+                        <label class="form-check-label">7</label>
+                    </div>
+                    <div class="form-check">
+                        <input type="radio" name="q9" value="B">
+                        <label class="form-check-label">9</label>
+                    </div>
+                    <div class="form-check">
+                        <input type="radio" name="q9" value="C">
+                        <label class="form-check-label">12</label>
+                    </div>
+                    <div class="form-check">
+                        <input type="radio" name="q9" value="D">
+                        <label class="form-check-label">8</label>
+                    </div>
+                </div>
+
+                <div class="question question-10">
+                    <h3 class="question-title">10. Who destroys the one ring of power?</h3>
+                    <div class="form-check">
+                        <input type="radio" name="q10" value="A">
+                        <label class="form-check-label">Frodo</label>
+                    </div>
+                    <div class="form-check">
+                        <input type="radio" name="q10" value="B">
+                        <label class="form-check-label">Sam</label>
+                    </div>
+                    <div class="form-check">
+                        <input type="radio" name="q10" value="C">
+                        <label class="form-check-label">Gollum</label>
+                    </div>
+                    <div class="form-check">
+                        <input type="radio" name="q10" value="D">
+                        <label class="form-check-label">Gandalf</label>
+                    </div>
+                </div>
+            </form>
+        </section>
+    </main>
+    
+    <script src="js/script.js"></script>
 </body>
 </html>
