Third commit, added JS to make the quiz fully functional

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h1 class="title">One Lord Of The Rings Quiz To Rule Them All</h1>
         </div>
         <div class="quiz-results">
-            <p>You scored<span> 0%</span></p>
+            <p>You scored <span>0%</span></p>
         </div>
     </header>
 
@@ -221,6 +221,10 @@
                         <input type="radio" name="q10" value="D">
                         <label class="form-check-label">Gandalf</label>
                     </div>
+                </div>
+
+                <div class="button-container">
+                    <input type="submit" class="btn">
                 </div>
             </form>
         </section>
